deploy/keycloak/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hibana-identity
  labels:
    app.kubernetes.io/part-of: hibana-identity
